--- a/thule-config-service/src/main/resources/config/thule-people-service/application.yml
+++ b/thule-config-service/src/main/resources/config/thule-people-service/application.yml
@@ -14,6 +14,10 @@ endpoints:
 info:
   description: Thule People Service
   name: ${spring.application.name}
+management:
+  security:
+    # Disabled to enable health endpoint to show complete health rather than just 'status'
+    enabled: false
 
 # Spring logging
 logging:
@@ -46,6 +50,9 @@ spring:
     url: jdbc:log4jdbc:h2:mem:testdb
   jackson:
     serialization:
+      # Admin server displays the buildTime of this service which by default will be as an
+      # absolute time (i.e. a long), not particularly meaningful unless we instruct jackson to
+      # serialize it as a timestamp which is a human readable form
       write_dates_as_timestamps: false
   jpa:
     hibernate:
