--- a/thule-discovery-service/src/main/resources/config/bootstrap.yml
+++ b/thule-discovery-service/src/main/resources/config/bootstrap.yml
@@ -5,7 +5,7 @@ info:
 
 # Spring server configuration
 # By default, tomcat will listen on port 8080 and will be restarted once the config has been read from the config service.
-# Unfortunatly, when multiple spring cloud services are starting at the same time in the same container (e.g. when testing),
+# Unfortunately, when multiple spring cloud services are starting at the same time in the same container (e.g. when testing),
 # they will all try to use port 8080 until they have been restarted following a config refresh. To overcome this,
 # port 0 (i.e. random unused port) will be used until the config has been refreshed and the correct port used.
 server:
