--- a/thule-config-service/src/main/docker/Dockerfile
+++ b/thule-config-service/src/main/docker/Dockerfile
@@ -1,8 +1,4 @@
-FROM openjdk:8-alpine
-
-################################  Update the base image  ################################
-# su-exec as an alternative to chroot which is not available in alpine for easy step-down from root
-RUN apk add --update bash su-exec
+FROM openjdk:8-jre-alpine
 
 ################################  Create user  ################################
 ENV GID 1000
@@ -19,10 +15,6 @@ VOLUME /tmp
 
 # Copy the app's jar file to the container
 COPY *.jar /
-
-# Touch the jar file so that it has a file modification time (Docker creates all container files in an "unmodified" state by default).
-# Any static content (e.g. "index.html") would require the file to have a modification time.
-RUN touch *.jar
 
 ################################  Create entrypoint  ################################
 COPY docker-entrypoint.sh /
