--- a/settings.gradle
+++ b/settings.gradle
@@ -3,10 +3,12 @@ rootProject.name = "thule"
 include "thule-admin-server"
 include "thule-cloud"
 include "thule-config-service"
-include "thule-core"
 include "thule-discovery-service"
 include "thule-edge-server"
 include "thule-email-service"
 include "thule-people-service"
 include "thule-repository-mongodb"
+include "thule-spring-boot-autoconfiguration"
+include "thule-spring-boot-starter-utils"
 include "thule-test"
+include "thule-utils"
