--- a/build.gradle
+++ b/build.gradle
@@ -85,6 +85,7 @@ allprojects {
         }
         dependencies {
             dependency("com.bitmechanic:dumbster:1.9.0.2")
+            dependency("com.github.tomakehurst:wiremock:2.6.0")
             dependency("com.googlecode.log4jdbc:log4jdbc:1.2")
             dependency("com.oracle:ojdbc6:11.2.0.1.0")
             dependency("de.codecentric:spring-boot-admin-server:1.5.1")
@@ -241,7 +242,10 @@ project("thule-cloud") {
         compile("org.apache.httpcomponents:httpclient")
         compile("org.springframework.boot:spring-boot-starter-actuator")
         compile("org.springframework.boot:spring-boot-starter-logging")
-        compile("org.springframework.boot:spring-boot-starter-web")
+        compile("org.springframework.boot:spring-boot-starter-web") {
+            exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
+        }
+        compile("org.springframework.boot:spring-boot-starter-jetty")
 
         testCompile project(":thule-test")
         testCompile("nl.jqno.equalsverifier:equalsverifier")
@@ -441,6 +445,7 @@ project("thule-people-service") {
         compile("org.springframework.boot:spring-boot-starter-validation")
         compile("org.springframework.cloud:spring-cloud-starter-config")
         compile("org.springframework.cloud:spring-cloud-starter-eureka")
+        compile("org.springframework.cloud:spring-cloud-starter-feign")
         compile("org.springframework.cloud:spring-cloud-starter-sleuth")
         compile("org.springframework.cloud:spring-cloud-starter-zipkin")
         compile("org.springframework.data:spring-data-rest-hal-browser")
@@ -450,6 +455,7 @@ project("thule-people-service") {
         // Add config to classpath for integration tests
         testCompile project(":thule-config-service").sourceSets.main.output
         testCompile project(":thule-test")
+        testCompile("com.github.tomakehurst:wiremock")
         testCompile("com.googlecode.log4jdbc:log4jdbc")
         testCompile("com.oracle:ojdbc6")
         testCompile("mysql:mysql-connector-java")
@@ -514,7 +520,10 @@ project("thule-utils") {
         compile("org.codehaus.janino:janino") // Required by logback if-condition statements in the xml configuration
         compile("org.springframework.boot:spring-boot-starter-aop")
         compile("org.springframework.boot:spring-boot-starter-logging")
-        compile("org.springframework.boot:spring-boot-starter-web")
+        compile("org.springframework.boot:spring-boot-starter-web") {
+            exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
+        }
+        compile("org.springframework.boot:spring-boot-starter-jetty")
 
         testCompile project(":thule-test")
         testCompile("nl.jqno.equalsverifier:equalsverifier")
