--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     ext["hsqldb.version"] = "2.4.0"// Remove when spring boot has caught up with the latest version
     ext["jackson.version"] = "2.8.9"// Remove when spring boot has caught up with the latest version
     ext["mockito.version"] = "2.7.22"  // Remove when spring boot has caught up with the latest version
-    ext["mysql.version"] = "6.0.6"  // Remove when spring boot has caught up with the latest version
+    ext["mysql.version"] = "8.0.7-dmr"  // Remove when spring boot has caught up with the latest version
     ext["spring-retry.version"] = "1.2.1.RELEASE"  // Remove when spring boot has caught up with the latest version
 
     ext {
