--- a/build.gradle
+++ b/build.gradle
@@ -95,6 +95,7 @@ allprojects {
             dependency("org.awaitility:awaitility:3.0.0")
             dependency("org.codehaus.janino:janino:3.0.7")
             dependency("org.jolokia:jolokia-core:1.3.7")
+            dependency("org.springframework.data:spring-data-rest-hal-browser:2.6.5.RELEASE")
         }
     }
 
