Downgraded to java8

--- a/build.gradle
+++ b/build.gradle
@@ -353,9 +353,10 @@ project("thule-discovery-service") {
         buildInfo()
     }
 
-    tasks.withType(Test) {
-        jvmArgs += ["--add-modules", "java.xml.bind"]
-    }
+    // Required for Java9
+//    tasks.withType(Test) {
+//        jvmArgs += ["--add-modules", "java.xml.bind"]
+//    }
 
     dependencies {
         compile project(":thule-spring-boot-starter-utils")
