--- a/thule-spring-boot-starters/build.gradle
+++ b/thule-spring-boot-starters/build.gradle
@@ -22,7 +22,7 @@ buildscript {
 
 apply from: "${rootDir}/../gradle/plugins-sonarqube-config.gradle"
 
-subprojects {
+allprojects {
     apply from: "${rootDir}/../gradle/plugins-config.gradle"
     apply from: "${rootDir}/../gradle/build-config.gradle"
 
